[gd_scene load_steps=17 format=2]

[ext_resource path="res://Levels/Parent/Level.tscn" type="PackedScene" id=1]
[ext_resource path="res://Objects/Car/Car.tscn" type="PackedScene" id=2]
[ext_resource path="res://Enemies/Pig/Pig.tscn" type="PackedScene" id=3]
[ext_resource path="res://Blood/BloodSplats.png" type="Texture" id=4]
[ext_resource path="res://Blood/Blood.tscn" type="PackedScene" id=5]
[ext_resource path="res://Levels/Level1/concreteFloor.png" type="Texture" id=6]
[ext_resource path="res://Objects/WallPolygon/WallPolygon.tscn" type="PackedScene" id=7]
[ext_resource path="res://Objects/Door/Door.tscn" type="PackedScene" id=8]
[ext_resource path="res://Levels/Level4/Level4.gd" type="Script" id=9]
[ext_resource path="res://Enemies/Parent/Speech.tscn" type="PackedScene" id=10]
[ext_resource path="res://Levels/Level4/Tarmac.png" type="Texture" id=11]
[ext_resource path="res://Levels/Level4/Tiles1.png" type="Texture" id=12]
[ext_resource path="res://Enemies/Tortoise/Tortoise.tscn" type="PackedScene" id=13]
[ext_resource path="res://Objects/Ammo/Ammo.tscn" type="PackedScene" id=14]

[sub_resource type="NavigationPolygon" id=2]
vertices = PoolVector2Array( 864, -176, 864, 16, -240, 16, -240, -176 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]
outlines = [ PoolVector2Array( -240, -176, -240, 16, 864, 16, 864, -176 ) ]

[sub_resource type="CircleShape2D" id=1]
radius = 64.0

[node name="Level4" instance=ExtResource( 1 )]
script = ExtResource( 9 )
__meta__ = {
"_edit_vertical_guides_": [  ]
}

[node name="Navigation" type="Navigation2D" parent="." index="0"]
edge_connection_margin = 10.0

[node name="Start" type="Node2D" parent="." index="3"]

[node name="Car" parent="Start" index="0" instance=ExtResource( 2 )]
position = Vector2( 2, -137 )
rotation = 2.16862

[node name="Blood" type="Node2D" parent="Start/Car/Sprite" index="0"]
position = Vector2( 32.6757, -21.5589 )
rotation = -2.16862
scale = Vector2( 0.285714, 0.285714 )

[node name="Splat" type="Sprite" parent="Start/Car/Sprite/Blood" index="0"]
modulate = Color( 1, 0.168627, 0.168627, 1 )
position = Vector2( -40, -201 )
rotation = -1.10025
scale = Vector2( 1, 1 )
texture = ExtResource( 4 )
hframes = 4

[node name="Splat3" type="Sprite" parent="Start/Car/Sprite/Blood" index="1"]
modulate = Color( 0.760784, 0.223529, 0.223529, 1 )
position = Vector2( -51, -188 )
rotation = 2.44274
scale = Vector2( 1, 1 )
texture = ExtResource( 4 )
hframes = 4
frame = 2

[node name="Splat4" type="Sprite" parent="Start/Car/Sprite/Blood" index="2"]
modulate = Color( 1, 0.168627, 0.168627, 1 )
position = Vector2( -37, -189 )
rotation = 1.21587
scale = Vector2( 1, 1 )
texture = ExtResource( 4 )
hframes = 4
frame = 2

[node name="Pig" parent="Start" index="1" instance=ExtResource( 3 )]
position = Vector2( -44, -303 )
rotation = -1.309
aggressive = false
showGun = false
kill = true

[node name="Blood" parent="Start" index="2" instance=ExtResource( 5 )]
position = Vector2( -48, -219 )

[node name="Floor" type="Polygon2D" parent="Start" index="3"]
z_index = -20
z_as_relative = false
color = Color( 0.72549, 0.72549, 0.72549, 1 )
texture = ExtResource( 11 )
texture_scale = Vector2( 0.3, 0.3 )
polygon = PoolVector2Array( -352, -416, 224, -416, 224, -48, 704, -48, 704, 80, 224, 80, 224, 192, -352, 192 )

[node name="Parking" type="Line2D" parent="Start" index="4"]
z_index = -19
z_as_relative = false
points = PoolVector2Array( 192, -80, -16, -80, -16, -176, 192, -176 )
default_color = Color( 1, 1, 1, 1 )

[node name="Parking2" type="Line2D" parent="Start" index="5"]
position = Vector2( 0, -144 )
z_index = -19
z_as_relative = false
points = PoolVector2Array( 192, -80, -16, -80, -16, -176, 192, -176 )
default_color = Color( 1, 1, 1, 1 )

[node name="Room1" type="Node2D" parent="." index="4"]
position = Vector2( 544, -160 )

[node name="NavigationPolygonInstance" type="NavigationPolygonInstance" parent="Room1" index="0"]
navpoly = SubResource( 2 )

[node name="Floor" type="Polygon2D" parent="Room1" index="1"]
z_index = -20
z_as_relative = false
color = Color( 0.584314, 0.72549, 0.529412, 1 )
texture = ExtResource( 12 )
polygon = PoolVector2Array( -320, -256, -320, 112, 864, 112, 864, -256 )

[node name="Entrance" parent="Room1" index="2" instance=ExtResource( 8 )]
position = Vector2( -160, 120 )
rotation = -1.5708

[node name="WallPolygon" parent="Room1" index="3" instance=ExtResource( 7 )]
z_index = -19
color = Color( 0.231373, 0.419608, 0.192157, 1 )
texture = ExtResource( 6 )
texture_scale = Vector2( 0.5, 0.5 )
polygon = PoolVector2Array( -352, 96, -352, -256, -320, -288, 896, -288, 928, -256, 928, 704, 896, 736, 768, 736, 736, 720, 736, 688, 768, 672, 864, 672, 864, 128, 528, 128, 496, 112, 496, 80, 528, 64, 864, 64, 864, -224, -288, -224, -288, 64, -224, 64, -192, 96, -192, 128, -320, 128 )

[node name="WallPolygon3" parent="Room1" index="4" instance=ExtResource( 7 )]
z_index = -19
color = Color( 0.231373, 0.419608, 0.192157, 1 )
texture = ExtResource( 6 )
texture_scale = Vector2( 0.5, 0.5 )
polygon = PoolVector2Array( -128, 96, -128, 128, 96, 128, 128, 160, 128, 192, 96, 224, 192, 224, 192, 128, 400, 128, 432, 112, 432, 80, 400, 64, 192, 64, 128, 64, -96, 64 )

[node name="Enemies" type="Node2D" parent="Room1" index="5"]

[node name="PasswordPig" parent="Room1/Enemies" index="0" instance=ExtResource( 3 )]
position = Vector2( -160, 64 )
rotation = 1.5708
aggressive = false
showGun = false

[node name="AngryPig" parent="Room1/Enemies" index="1" instance=ExtResource( 3 )]
position = Vector2( -32, -48 )
rotation = 2.39701

[node name="Tortoise" parent="Room1/Enemies" index="2" instance=ExtResource( 13 )]
position = Vector2( 240, -144 )
rotation = -5.71507

[node name="Tortoise2" parent="Room1/Enemies" index="3" instance=ExtResource( 13 )]
position = Vector2( 496, -16 )
rotation = -3.3399

[node name="Tortoise3" parent="Room1/Enemies" index="4" instance=ExtResource( 13 )]
position = Vector2( 816, -144 )
rotation = -4.50798

[node name="Tortoise4" parent="Room1/Enemies" index="5" instance=ExtResource( 13 )]
position = Vector2( 816, -16 )
rotation = -1.61574

[node name="PasswordTrigger" type="Area2D" parent="Room1" index="6"]
position = Vector2( -288, 160 )
collision_layer = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Room1/PasswordTrigger" index="0"]
position = Vector2( 64, 16 )
shape = SubResource( 1 )

[node name="PasswordSpeech" parent="Room1" index="7" instance=ExtResource( 10 )]
visible = false
position = Vector2( -160, 30 )

[node name="AngrySpeech" parent="Room1" index="8" instance=ExtResource( 10 )]
visible = false
position = Vector2( -176, -48 )

[node name="Ammo" parent="Room1" index="9" instance=ExtResource( 14 )]
position = Vector2( -205, -71 )
rotation = -0.523599

[node name="Ammo2" parent="Room1" index="10" instance=ExtResource( 14 )]
position = Vector2( -174, -131 )
rotation = 0.472141

[node name="Ammo6" parent="Room1" index="11" instance=ExtResource( 14 )]
position = Vector2( -235, -189 )
rotation = 0.343538

[node name="Ammo3" parent="Room1" index="12" instance=ExtResource( 14 )]
position = Vector2( -224, -176 )
rotation = -0.659454

[node name="Ammo5" parent="Room1" index="13" instance=ExtResource( 14 )]
position = Vector2( -220, -190 )
rotation = -0.821892

[node name="Ammo4" parent="Room1" index="14" instance=ExtResource( 14 )]
position = Vector2( -216, -182 )
rotation = 0.234386

[node name="Door" parent="Room1" index="15" instance=ExtResource( 8 )]
position = Vector2( 464, 96 )
rotation = 4.71239

[node name="Room2" type="Node2D" parent="." index="5"]
position = Vector2( 1088, 240 )

[node name="Floor" type="Polygon2D" parent="Room2" index="0"]
z_index = -20
z_as_relative = false
color = Color( 0.584314, 0.72549, 0.529412, 1 )
texture = ExtResource( 12 )
polygon = PoolVector2Array( -384, -304, -384, 304, 352, 304, 352, -304 )

[node name="Door" parent="Room2" index="1" instance=ExtResource( 8 )]
position = Vector2( -384, 48 )
rotation = -3.14159

[node name="WallPolygon3" parent="Room2" index="2" instance=ExtResource( 7 )]
z_index = -19
color = Color( 0.231373, 0.419608, 0.192157, 1 )
texture = ExtResource( 6 )
texture_scale = Vector2( 0.5, 0.5 )
polygon = PoolVector2Array( 128, 288, 96, 272, -352, 272, -352, 112, -368, 80, -400, 80, -416, 112, -416, 272, -560, 272, -592, 288, -592, 320, -560, 336, 96, 336, 128, 320 )

[node name="Door2" parent="Room2" index="3" instance=ExtResource( 8 )]
position = Vector2( 160, 304 )
rotation = 1.5708

[node name="Room3" type="Node2D" parent="." index="6"]
position = Vector2( 448, 272 )

[node name="WallPolygon2" parent="Room3" index="0" instance=ExtResource( 7 )]
position = Vector2( 96, -432 )
z_index = -19
color = Color( 0.231373, 0.419608, 0.192157, 1 )
texture = ExtResource( 6 )
texture_scale = Vector2( 0.5, 0.5 )
polygon = PoolVector2Array( -320, 224, 192, 224, 192, 384, 176, 416, 144, 416, 128, 384, 128, 288, -288, 288, -288, 672, -144, 672, -112, 688, -112, 720, -144, 736, -320, 736, -352, 704, -352, 256 )

[connection signal="smashed" from="Room1/Entrance" to="." method="_on_Entrance_smashed"]
[connection signal="died" from="Room1/Enemies/AngryPig" to="." method="_on_AngryPig_died"]
[connection signal="body_entered" from="Room1/PasswordTrigger" to="." method="_on_PasswordTrigger_body_entered"]

[editable path="Start/Car"]
